--- a/HW1/index.html
+++ b/HW1/index.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YCPSZCN8XK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YCPSZCN8XK');
+</script>
+        
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>王聖復的網頁</title>
