--- a/qz3/qz3.html
+++ b/qz3/qz3.html
@@ -10,7 +10,7 @@
         <p id="valueInput"></p> 
         <input type="text" id="num" > 
         
-        <script src="script.js"></script>
+        <script src="qz3.js"></script>
 
     </body>
 </html>
