--- a/qz6/qz6.html
+++ b/qz6/qz6.html
@@ -2,7 +2,7 @@
   <head>
   </head>  
   <body onload="startTime()">
-   CGU  TIMER
+   <h1>CGU  TIMER
     <div id="clock"></div>
   </body>
 </html>
