--- a/qz6/qz6.html
+++ b/qz6/qz6.html
@@ -1,8 +1,12 @@
 <html>
   <head>
+    <script src="qz6.js"></script>
   </head>  
+  <body>
+  <script src="qz6.js"></script>
   <body onload="startTime()">
    <h1>CGU  TIMER
     <div id="clock"></div>
+     
   </body>
 </html>
